Make SkRender,SkDDL work with passthrough decoder

Works with these flags on Linux build with DCHECKs enabled:

 --use-gl=angle --use-angle=gl --use-cmd-decoder=passthrough --enable-features="VizDisplayCompositor,UseSkiaRenderer,UseSkiaDeferredDisplayList"

Bug: 892272
Change-Id: I48c2caec780a6243b58e3ed1b2c60240f7a3b213
Reviewed-on: https://chromium-review.googlesource.com/c/1348589
Reviewed-by: weiliangc <weiliangc@chromium.org>
Reviewed-by: Peng Huang <penghuang@chromium.org>
Commit-Queue: Jonathan Backer <backer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610491}
Former-commit-id: c649646549d03be00f4ba32f0f71eb14d51dac68