components/viz/service/display_embedder/skia_output_surface_impl_on_gpu.cc
@@ -30,6 +30,7 @@
 #include "ui/gfx/skia_util.h"
 #include "ui/gl/gl_bindings.h"
 #include "ui/gl/gl_context.h"
+#include "ui/gl/gl_gl_api_implementation.h"
 #include "ui/gl/gl_surface.h"
 #include "ui/gl/gl_version_info.h"
 #include "ui/gl/init/gl_factory.h"
@@ -344,8 +345,11 @@ void SkiaOutputSurfaceImplOnGpu::FulfillPromiseTexture(
     return;
   }
   BindOrCopyTextureIfNecessary(texture_base);
-  GetGrBackendTexture(*gl_version_info(), *texture_base, metadata.color_type,
-                      backend_texture);
+  gpu::GetGrBackendTexture(texture_base->target(), metadata.size,
+                           *metadata.backend_format.getGLFormat(),
+                           *metadata.driver_backend_format.getGLFormat(),
+                           texture_base->service_id(), metadata.color_type,
+                           backend_texture);
 }
 
 void SkiaOutputSurfaceImplOnGpu::FulfillPromiseTexture(
