gpu/command_buffer/service/skia_utils.cc
@@ -4,45 +4,13 @@
 
 #include "gpu/command_buffer/service/skia_utils.h"
 
-#include "gpu/command_buffer/service/error_state.h"
-#include "gpu/command_buffer/service/texture_manager.h"
-#include "gpu/command_buffer/service/wrapped_sk_image.h"
+#include "base/logging.h"
 #include "third_party/skia/include/gpu/GrBackendSurface.h"
 #include "third_party/skia/include/gpu/gl/GrGLTypes.h"
-#include "ui/gl/gl_gl_api_implementation.h"
+#include "ui/gfx/geometry/size.h"
+#include "ui/gl/gl_bindings.h"
 
 namespace gpu {
-
-bool GetGrBackendTexture(const gl::GLVersionInfo& version_info,
-                         const TextureBase& texture_base,
-                         GLint sk_color_type,
-                         GrBackendTexture* gr_texture) {
-  if (texture_base.GetType() != TextureBase::Type::kValidated) {
-    NOTIMPLEMENTED();
-    return false;
-  }
-  const auto* texture = static_cast<const gles2::Texture*>(&texture_base);
-
-  int width;
-  int height;
-  int depth;
-  if (!texture->GetLevelSize(texture->target(), 0, &width, &height, &depth)) {
-    LOG(ERROR) << "GetGrBackendTexture: missing texture size info.";
-    return false;
-  }
-  GLenum type;
-  GLenum internal_format;
-  if (!texture->GetLevelType(texture->target(), 0, &type, &internal_format)) {
-    LOG(ERROR) << "GetGrBackendTexture: missing texture type info.";
-    return false;
-  }
-
-  GLenum driver_internal_format =
-      GetInternalFormat(&version_info, internal_format);
-  return GetGrBackendTexture(texture->target(), gfx::Size(width, height),
-                             internal_format, driver_internal_format,
-                             texture->service_id(), sk_color_type, gr_texture);
-}
 
 bool GetGrBackendTexture(GLenum target,
                          const gfx::Size& size,
